--- a/tools/ScenarioEditor/ScenarioEditor/Properties/Resources.resx
+++ b/tools/ScenarioEditor/ScenarioEditor/Properties/Resources.resx
@@ -211,7 +211,7 @@
     <value>...</value>
   </data>
   <data name="GuideFindPath" xml:space="preserve">
-    <value>(캐릭터 파일 경로를 설정해주세요)</value>
+    <value>(파일 경로를 설정해주세요)</value>
   </data>
   <data name="AddNextCmd" xml:space="preserve">
     <value>다음 명령어 추가</value>
@@ -304,7 +304,7 @@
     <value>화면 필터 편집</value>
   </data>
   <data name="EditAppear" xml:space="preserve">
-    <value>캐릭터 출연</value>
+    <value>캐릭터 등장</value>
   </data>
   <data name="EditText" xml:space="preserve">
     <value>지문 편집</value>
@@ -347,5 +347,14 @@
   </data>
   <data name="GuideText" xml:space="preserve">
     <value>(지문을 입력해주세요)</value>
+  </data>
+  <data name="EditTargetAppear" xml:space="preserve">
+    <value>타겟 등장</value>
+  </data>
+  <data name="ErrNotFoundTarget" xml:space="preserve">
+    <value>타겟을 찾을 수 없습니다.</value>
+  </data>
+  <data name="LabelTargetFilePath" xml:space="preserve">
+    <value>타겟 파일 경로</value>
   </data>
 </root>
